# movObjectCheck

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  QUICKTEST.md  README.md  系统功能说明.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: config.ini  config_device2.ini  server_config.ini  test_device.ini
docs/: CONFIGURATION.md  DEPLOYMENT.md  HEARTBEAT.md  TESTING.md  TROUBLESHOOTING.md
scripts/: build.sh  check_build.sh  deploy.sh  install_dependencies.sh  mock_client.py  run_test.bat  start_client.bat  start_server.bat  test_heartbeat.py  test_heartbeat.sh
server/: server.py
src/: config.cpp  config.h  main.cpp  motion_detector.cpp  motion_detector.h  network_sender.cpp  network_sender.h  protocol.h
